# debugger-mcp

./: .commitlintrc.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CLEANUP_ANALYSIS.md  CLEANUP_PLAN_REVISED.md  CRITICAL_BUG_FIX.md  Cargo.toml  Dockerfile  Dockerfile.go  Dockerfile.integration-tests  Dockerfile.nodejs  Dockerfile.nodejs-test  Dockerfile.ruby  Dockerfile.rust  ENHANCED_CI_SUMMARY.md  FINAL_STATUS.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS_IMPLEMENTED.md  LICENSE  MCP_NOTIFICATIONS.md  MVP_STATUS.md  Makefile  NEW_TOOLS_SUMMARY.md  PUSH_TO_GITHUB.md  README.md  READY_FOR_TESTING.md  RUBY_STOPENTRY_FIX_COMPLETE.md  SUMMARY.md  debug_prompt.md  deny.toml  docker-compose.yml  docker-entrypoint.sh  fizzbuzz.go  fizzbuzz.py  tarpaulin.toml  test_correct_sequence.py  test_debugpy_manual.py  (+1 more)
.config/: nextest.toml
.github/workflows/: ci.yml  integration-tests-matrix.yml  integration-tests.yml  release.yml
.pre-commit-hooks/: prevent-claude-attribution.sh
.qlty/: qlty.toml
docs/: ADDING_NEW_LANGUAGE.md  ASYNC_INIT_IMPLEMENTATION.md  BREAKPOINT_FIX_COMPLETE.md  CARGO_DENY_FIX.md  CI_CD_PIPELINE.md  CI_FIXES.md  CI_FIX_VALIDATED.md  COMPLETE_SOLUTION_SUMMARY.md  CONTAINER_PATH_GUIDE.md  COVERAGE_IMPROVEMENT_SUMMARY.md  COVERAGE_PHASE_5_6_COMPLETE.md  COVERAGE_PLAN_PHASE_5_9.md  COVERAGE_PROGRESS.md  COVERAGE_STRATEGY.md  DAP_EVENT_DRIVEN_DESIGN.md  DAP_FIX_COMPLETE.md  DAP_FIX_IMPLEMENTATION_PLAN.md  DAP_FIX_SUMMARY.md  DAP_IMPLEMENTATION_STATUS.md  DAP_LESSONS_LEARNED.md  DAP_PROTOCOL_SEQUENCE.md  DAP_TIMING_ANALYSIS.md  DAP_VERIFIED_SEQUENCE.md  DOCKER.md  DOCKER_STRATEGY_ANALYSIS.md  DOCUMENTATION_STRATEGY_SUMMARY.md  EMBEDDED_DOCUMENTATION_PROPOSAL.md  ENHANCED_CI_IMPLEMENTATION.md  ENHANCED_CI_PROPOSAL.md  EXPRESSION_SYNTAX_GUIDE.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_SUMMARY.md  FIXES_2025_10_05.md  FUTURE_MCP_RESOURCES.md  GETTING_STARTED.md  GLIBC_ISSUE_ROOT_CAUSE.md  GO_DEBUGGING_POSTMORTEM.md  IMPLEMENTATION_STATUS_OCT_2025.md  INSTALLATION_CHECKLIST.md  INTEGRATION_TESTS.md  (+60 more)
docs/Architecture/: DAP_MCP_SERVER_PROPOSAL.md
docs/Contributing/: INSTALLATION_CHECKLIST.md  TESTING_EXAMPLE.md
docs/Processes/: CROSS_PLATFORM_BUILDS.md
docs/Usage/: DOCKER.md  EXPRESSION_SYNTAX_GUIDE.md  INTEGRATION_TESTS.md
docs/research/: RESEARCH_SUMMARY.md  go-experiments-log.md  go-implementation-plan.md  go-testing-strategy.md  go-vs-java-comparison.md  rust-mcp-technology-stack.md
scripts/: analyze-test-results.sh  run-test-in-docker.sh  setup-branch-protection.sh  test-rust-docker.sh  test-rust-e2e.sh  test-tarpaulin.sh  test_dap_standalone.py  test_ruby_debugger.sh  test_ruby_integration.sh  verify_stopentry_issue.sh
src/: error.rs  lib.rs  main.rs
src/dap/: client.rs  (+6 more)
tests/: README.md  claude_code_integration_test.rs  cli_test.rs  go_integration_test.rs  integration_test.rs  python_integration_test.rs  ruby_integration_test.rs  rust_comprehensive_test.rs  rust_integration_test.rs  stopOnEntry_test.rs  test_claude_debug.sh  test_claude_mcp_local.sh  test_dap_direct.rs  test_event_driven.rs  test_golang_integration.rs  test_logging_architecture.rs  test_mcp_stdio.py  test_mcp_stdio.sh  test_multi_session_integration.rs  test_nodejs_integration.rs  test_real_world_logs.rs  test_result_extraction.rs  test_ruby_full_workflow.rs  test_ruby_full_workflow.rs.bak  test_ruby_integration.rs  test_ruby_socket_adapter.rs  test_ruby_stopentry_issue.rs  test_ruby_stopentry_issue.rs.bak  test_ruby_workflow.rs  test_rust_integration.rs  test_validation_fix.rs  user_feedback_tests.rs
(+53 files in other folders)
