[package]
name = "debugger_mcp"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
clap = { version = "4.5.48", features = ["derive"] }
flume = "0.11.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shellexpand = "3.1"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.23.0"
tokio-test = "0.4.4"
mockall = "0.13.1"
assert_matches = "1.5.0"

[[test]]
name = "fake_dap_adapter"
path = "tests/bin/fake_dap_adapter.rs"
harness = false

# Unit-like integration tests
[[test]]
name = "adapter_logging_test"
path = "tests/unit/adapter_logging_test.rs"

# Diagnostic tests
[[test]]
name = "dap_direct_test"
path = "tests/diagnostic/dap_direct_test.rs"

[[test]]
name = "event_driven_test"
path = "tests/diagnostic/event_driven_test.rs"

# Core integration tests
[[test]]
name = "stop_on_entry_test"
path = "tests/integration/core/stop_on_entry_test.rs"

[[test]]
name = "user_feedback_test"
path = "tests/integration/core/user_feedback_test.rs"

[[test]]
name = "multi_session_test"
path = "tests/integration/core/multi_session_test.rs"

[[test]]
name = "ruby_socket_adapter_test"
path = "tests/integration/core/ruby_socket_adapter_test.rs"

# Language-specific matrix integration tests
[[test]]
name = "python_integration_test"
path = "tests/integration/lang/python_integration_test.rs"

[[test]]
name = "ruby_integration_test"
path = "tests/integration/lang/ruby_integration_test.rs"

[[test]]
name = "nodejs_integration_test"
path = "tests/integration/lang/nodejs_integration_test.rs"

[[test]]
name = "go_integration_test"
path = "tests/integration/lang/go_integration_test.rs"

[[test]]
name = "rust_integration_test"
path = "tests/integration/lang/rust_integration_test.rs"
